# meal-recipe

./: .gitignore  CMakeLists.txt  Cargo.toml  Milk and Meat food  README.md  meal-recipe.cpp  recipe.json
app/: Main.cpp
core/Service/: calculateCalories.cpp  calculateCalories.h  calculateValueOfRecipe.cpp  calculateValueOfRecipe.h
core/dto/: Ingredient.cpp  Ingredient.h  IngredientDTO.cpp  RecipeDTO.cpp  RecipeDTO.h
core/ports/: DBPort.h
dto/: IngredientDTO.h  RecipeDTO.cpp  RecipeDTO.h
recipes/: Milk_Meat.json  gaming.json
src/: File_manager.rs  Milk_Meat  file_manager.rs  groceri.rs  grocery.rs  iced_controller.rs  main.rs  recipe.rs
storage/: JsonDBAdapter.cpp  JsonDBAdapter.h
